spade-tests/src/snapshots/spade_tests__ast_lowering__pub_suggestions_are_not_printed_if_the_use_and_usee_are_in_different_base_namespaces.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct Thing {}

use other::Thing;


error: Thing is inaccessible
  ┌─ src/main.spade:1:12
  │
1 │ use other::Thing;
  │            ^^^^^ Thing is inaccessible
  │
  ┌─ src/main.spade:1:1
  │
1 │ struct Thing {}
  │ --------------- The inaccessible item is defined here
